--- a/app/src/main/res/layout/activity_history_for_measurements.xml
+++ b/app/src/main/res/layout/activity_history_for_measurements.xml
@@ -6,16 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".history_for_measurements">
 
-    <ImageView
-        android:id="@+id/redBackground2"
-        android:layout_width="522dp"
-        android:layout_height="281dp"
-        android:layout_marginBottom="576dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="421dp"
+        android:layout_height="92dp"
+        android:layout_marginBottom="20dp"
+        android:background="#E73927"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
+        app:layout_constraintBottom_toTopOf="@+id/medicationsView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/background" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageView6"
@@ -32,13 +34,26 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="672dp"
+        android:layout_marginBottom="36dp"
         android:fontFamily="@font/viga"
-        android:text="Welcome, name"
+        android:text="Welcome,"
         android:textColor="#FFFFFF"
         android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/welcome_nameView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="36dp"
+        android:fontFamily="@font/viga"
+        android:text="name"
+        android:textColor="#FFFFFF"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
+        app:layout_constraintStart_toEndOf="@+id/welcomeName" />
 
     <TextView
         android:id="@+id/medicationsView"
@@ -82,9 +97,9 @@
         android:id="@+id/view2"
         android:layout_width="wrap_content"
         android:layout_height="2dp"
-        android:layout_marginBottom="560dp"
+        android:layout_marginBottom="10dp"
         android:background="#E73927"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/imageView9"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
@@ -94,9 +109,9 @@
         android:layout_width="56dp"
         android:layout_height="51dp"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginBottom="8dp"
         android:backgroundTint="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/textViewHome"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/home" />
 
@@ -116,9 +131,8 @@
         android:layout_width="66dp"
         android:layout_height="61dp"
         android:layout_marginStart="44dp"
-        android:layout_marginBottom="32dp"
         android:backgroundTint="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/textViewHistory"
         app:layout_constraintStart_toEndOf="@+id/imageTodayButton"
         app:srcCompat="@drawable/history" />
 
@@ -127,9 +141,9 @@
         android:layout_width="56dp"
         android:layout_height="51dp"
         android:layout_marginStart="332dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginBottom="8dp"
         android:backgroundTint="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/textViewProfile"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/user" />
 
@@ -149,48 +163,48 @@
         android:id="@+id/textViewToday"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="124dp"
+        android:layout_marginStart="60dp"
         android:layout_marginBottom="8dp"
         android:text="Today"
         android:textColor="#000000"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/textViewHome" />
 
     <TextView
         android:id="@+id/textViewHistory"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="240dp"
+        android:layout_marginStart="66dp"
         android:layout_marginBottom="8dp"
         android:text="History"
         android:textColor="#000000"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/textViewToday" />
 
     <TextView
         android:id="@+id/textViewProfile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="340dp"
+        android:layout_marginStart="44dp"
         android:layout_marginBottom="8dp"
         android:text="Profile"
         android:textColor="#000000"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/textViewHistory" />
 
     <TextView
         android:id="@+id/dateView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginBottom="512dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="116dp"
         android:text="Date"
         android:textColor="#000000"
         android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
@@ -207,24 +221,24 @@
         android:id="@+id/type_of_health_measurementsView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="72dp"
-        android:layout_marginBottom="468dp"
+        android:layout_marginEnd="68dp"
+        android:layout_marginBottom="12dp"
         android:text="type of health measurements"
         android:textColor="#000000"
         android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/dosageMeasurementsView"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/dosageMeasurementsView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="200dp"
-        android:layout_marginBottom="436dp"
+        android:layout_marginEnd="196dp"
+        android:layout_marginBottom="32dp"
         android:text="Dosage"
         android:textColor="#000000"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
         app:layout_constraintEnd_toStartOf="@+id/textView9" />
 
     <TextView
