--- a/app/src/main/res/layout/activity_edit_delete_medications.xml
+++ b/app/src/main/res/layout/activity_edit_delete_medications.xml
@@ -6,66 +6,118 @@
     android:layout_height="match_parent"
     tools:context=".edit_delete_medications">
 
-
-    <ImageView
-        android:id="@+id/redBackground4"
-        android:layout_width="522dp"
-        android:layout_height="281dp"
-        android:layout_marginBottom="584dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/background" />
-
-    <TextView
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline19"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="668dp"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="20dp"
+        app:layout_constraintGuide_percent="0.0"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline20"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="20dp"
+        app:layout_constraintGuide_percent="0.20"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline21"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="20dp"
+        app:layout_constraintGuide_percent="0.40"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline22"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="20dp"
+        app:layout_constraintGuide_percent="0.60"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline23"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="20dp"
+        app:layout_constraintGuide_percent="0.80"/>
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="421dp"
+        android:layout_height="92dp"
+        android:layout_marginBottom="6dp"
+        android:background="#E73927"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
+        app:layout_constraintBottom_toTopOf="@+id/medicineName_txt"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+    <ImageButton
+        android:id="@+id/imageBack"
+        android:layout_width="64dp"
+        android:layout_height="68dp"
+        android:layout_marginEnd="348dp"
+        android:backgroundTint="#E73927"
+        app:layout_constraintBottom_toBottomOf="@+id/textView11"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/backarrow" />
+
+    <TextView
+        android:id="@+id/textView11"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="24dp"
         android:text="Edit Medications"
         android:textColor="#FFFFFF"
-        android:textSize="35sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="33sp"
+        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent" />
-
 
     <TextView
         android:id="@+id/medicineName_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="616dp"
+        android:layout_marginBottom="8dp"
         android:text="Medicine Name"
         android:textColor="#000000"
         android:textSize="22sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/medicine_Box"
         app:layout_constraintStart_toStartOf="parent" />
-
 
     <EditText
         android:id="@+id/medicine_Box"
         android:layout_width="295dp"
         android:layout_height="57dp"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="552dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/edittext3"
         android:ems="10"
         android:hint="Medicine Name"
         android:inputType="textPersonName"
         android:paddingStart="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/dosage_txt"
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageButton
         android:id="@+id/ocr1"
         android:layout_width="46dp"
         android:layout_height="49dp"
-        android:layout_marginStart="328dp"
-        android:layout_marginBottom="552dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="16dp"
         android:backgroundTint="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/type_txt"
+        app:layout_constraintStart_toEndOf="@+id/medicine_Box"
         app:srcCompat="@drawable/scan" />
 
     <TextView
@@ -73,11 +125,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="516dp"
+        android:layout_marginBottom="8dp"
         android:text="Dosage"
         android:textColor="#000000"
         android:textSize="22sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/DosageBox"
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
@@ -85,35 +137,34 @@
         android:layout_width="149dp"
         android:layout_height="48dp"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="460dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/edittext3"
         android:ems="10"
         android:hint="Dosage"
         android:inputType="textPersonName"
         android:paddingStart="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/time_txt1"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/type_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="172dp"
-        android:layout_marginBottom="7dp"
+        android:layout_marginBottom="8dp"
         android:text="Type/Unit"
         android:textColor="#000000"
-        android:textSize="19sp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/type_spinner_two"
-        app:layout_constraintStart_toStartOf="parent" />
+        tools:layout_editor_absoluteX="173dp" />
 
     <Spinner
         android:id="@+id/type_spinner_two"
         android:layout_width="178dp"
         android:layout_height="48dp"
         android:layout_marginEnd="60dp"
-        android:layout_marginBottom="460dp"
+        android:layout_marginBottom="8dp"
         android:backgroundTint="#FDCB00"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/time_txt1"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
@@ -121,11 +172,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="424dp"
+        android:layout_marginBottom="8dp"
         android:text="Time"
         android:textColor="#000000"
         android:textSize="22sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/timeButton"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
@@ -133,14 +184,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="364dp"
+        android:layout_marginBottom="8dp"
         android:width="125dp"
         android:height="50dp"
         android:background="@drawable/edittext3"
         android:onClick="popTimePicker"
         android:text="Set Time"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/frequency_txt1"
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="OnClick" />
 
@@ -148,11 +199,11 @@
         android:id="@+id/add_btn"
         android:layout_width="51dp"
         android:layout_height="47dp"
-        android:layout_marginStart="156dp"
-        android:layout_marginBottom="368dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="8dp"
         android:backgroundTint="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/inventory_txt"
+        app:layout_constraintStart_toEndOf="@+id/timeButton"
         app:srcCompat="@drawable/add_button" />
 
     <TextView
@@ -160,7 +211,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="12dp"
+        android:layout_marginBottom="16dp"
         android:text="Frequency"
         android:textColor="#000000"
         android:textSize="22sp"
@@ -171,18 +222,18 @@
         android:id="@+id/frequency_spinner_two"
         android:layout_width="143dp"
         android:layout_height="54dp"
-        android:layout_marginEnd="252dp"
-        android:layout_marginBottom="252dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="12dp"
         android:backgroundTint="#FDCB00"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintBottom_toTopOf="@+id/duration_txt1"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/inventory_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="68dp"
-        android:layout_marginBottom="12dp"
+        android:layout_marginStart="66dp"
+        android:layout_marginBottom="14dp"
         android:text="Inventory"
         android:textColor="#000000"
         android:textSize="22sp"
@@ -193,25 +244,24 @@
         android:id="@+id/inventoryBox"
         android:layout_width="118dp"
         android:layout_height="55dp"
-        android:layout_marginStart="184dp"
-        android:layout_marginBottom="252dp"
+        android:layout_marginStart="25dp"
         android:background="@drawable/edittext3"
         android:ems="10"
         android:hint="Inventory"
         android:inputType="textPersonName"
         android:paddingStart="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/frequency_spinner_two"
+        tools:layout_editor_absoluteY="433dp" />
 
     <ImageButton
         android:id="@+id/ocr2"
         android:layout_width="46dp"
         android:layout_height="49dp"
-        android:layout_marginStart="328dp"
-        android:layout_marginBottom="256dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="60dp"
         android:backgroundTint="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/endButton_one"
+        app:layout_constraintStart_toEndOf="@+id/inventoryBox"
         app:srcCompat="@drawable/scan" />
 
     <TextView
@@ -219,11 +269,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="212dp"
+        android:layout_marginBottom="12dp"
         android:text="Duration"
         android:textColor="#000000"
         android:textSize="22sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/startButton_one"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
@@ -231,7 +281,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="152dp"
+        android:layout_marginBottom="12dp"
         android:width="125dp"
         android:height="50dp"
         android:background="@drawable/edittext3"
@@ -240,7 +290,7 @@
         android:text="Start"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/save_changes"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
@@ -248,7 +298,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="52dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="12dp"
         android:width="125dp"
         android:height="50dp"
         android:background="@drawable/edittext3"
@@ -261,40 +311,12 @@
         app:layout_constraintStart_toEndOf="@+id/startButton_one" />
 
     <Button
-        android:id="@+id/deleteBtn"
-        android:layout_width="247dp"
-        android:layout_height="49dp"
-        android:layout_marginBottom="16dp"
-        android:background="@drawable/editttextcancel"
-        android:fontFamily="@font/viga"
-        android:text="Delete"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textColor="#000000"
-        android:textSize="22sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.432"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <ImageButton
-        android:id="@+id/imageBack5"
-        android:layout_width="64dp"
-        android:layout_height="68dp"
-        android:layout_marginEnd="352dp"
-        android:layout_marginBottom="692dp"
-        android:backgroundTint="#E73927"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/backarrow" />
-
-    <Button
         android:id="@+id/save_changes"
         android:layout_width="233dp"
         android:layout_height="52dp"
         android:layout_marginStart="76dp"
         android:layout_marginEnd="102dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="12dp"
         android:background="@drawable/edit_round"
         android:fontFamily="@font/viga"
         android:text="Save Changes"
@@ -304,6 +326,22 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/deleteBtn"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/deleteBtn"
+        android:layout_width="233dp"
+        android:layout_height="49dp"
+        android:layout_marginStart="76dp"
+        android:layout_marginBottom="12dp"
+        android:background="@drawable/editttextcancel"
+        android:fontFamily="@font/viga"
+        android:text="Delete"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="#000000"
+        android:textSize="22sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
