--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -6,11 +6,25 @@
     android:layout_height="match_parent"
     tools:context=".forgot_password">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="421dp"
+        android:layout_height="92dp"
+        android:layout_marginBottom="24dp"
+        android:background="#E73927"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
     <Button
         android:id="@+id/resetbtn"
         android:layout_width="225dp"
         android:layout_height="56dp"
-        android:layout_marginEnd="92dp"
+        android:layout_marginStart="93dp"
+        android:layout_marginEnd="93dp"
         android:layout_marginBottom="124dp"
         android:background="@drawable/edit_round"
         android:fontFamily="@font/viga"
@@ -18,43 +32,33 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/lock"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="228dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="408dp"
+        android:layout_height="571dp"
+        app:layout_constraintBottom_toBottomOf="@+id/resetemail"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.382"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/lockkkk" />
-
-    <ImageView
-        android:id="@+id/redBackground"
-        android:layout_width="522dp"
-        android:layout_height="281dp"
-        android:layout_marginBottom="588dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/background" />
-
 
     <EditText
         android:id="@+id/resetemail"
         android:layout_width="374dp"
         android:layout_height="59dp"
-        android:layout_marginBottom="104dp"
+        android:layout_marginBottom="28dp"
         android:background="@drawable/edittext3"
         android:ems="10"
         android:hint="Email"
-        android:paddingStart="10dp"
         android:inputType="textEmailAddress"
-        app:layout_constraintBottom_toBottomOf="@+id/resetbtn"
+        android:paddingStart="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/resetbtn"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.432"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
@@ -62,23 +66,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="372dp"
+        android:layout_marginBottom="20dp"
         android:text="Forgot Password"
         android:textColor="#FFFFFF"
         android:textSize="40sp"
-        app:layout_constraintBottom_toTopOf="@+id/resetemail"
+        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginStart="16dp"
         android:text="Email"
         android:textColor="#000000"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/resetemail"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="401dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
