--- a/app/src/main/res/layout/activity_instruction_slidethree.xml
+++ b/app/src/main/res/layout/activity_instruction_slidethree.xml
@@ -8,6 +8,16 @@
 
 
     <ImageView
+        android:id="@+id/instruction_three_button"
+        android:layout_width="514dp"
+        android:layout_height="266dp"
+        android:layout_marginStart="76dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/next"
+        tools:ignore="OnClick" />
+
+    <ImageView
         android:id="@+id/imageView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -20,13 +30,13 @@
         android:id="@+id/tts"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="328dp"
+        android:layout_marginBottom="13dp"
         android:fontFamily="sans-serif"
         android:text="Text-to-Speech"
         android:textColor="#000000"
         android:textSize="26sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/description3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -34,13 +44,13 @@
         android:id="@+id/description3"
         android:layout_width="354dp"
         android:layout_height="62dp"
-        android:layout_marginBottom="252dp"
+        android:layout_marginBottom="49dp"
         android:fontFamily="@font/viga"
         android:text="Help you hear grammatical oddities in your text"
         android:textAlignment="center"
         android:textColor="#E73927"
         android:textSize="25sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/instruction_three_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent" />
