--- a/app/src/main/res/layout/activity_instruction_slidetwo.xml
+++ b/app/src/main/res/layout/activity_instruction_slidetwo.xml
@@ -7,6 +7,16 @@
     tools:context=".Instruction_slidetwo">
 
     <ImageView
+        android:id="@+id/instruction_two_btn"
+        android:layout_width="514dp"
+        android:layout_height="266dp"
+        android:layout_marginStart="76dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/next"
+        tools:ignore="OnClick" />
+
+    <ImageView
         android:id="@+id/imageView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -19,13 +29,13 @@
         android:id="@+id/ocr"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="324dp"
+        android:layout_marginBottom="9dp"
         android:fontFamily="sans-serif"
         android:text="Optical Character Recognition"
         android:textColor="#000000"
         android:textSize="26sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/description2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -33,13 +43,13 @@
         android:id="@+id/description2"
         android:layout_width="354dp"
         android:layout_height="62dp"
-        android:layout_marginBottom="252dp"
+        android:layout_marginBottom="49dp"
         android:fontFamily="@font/viga"
         android:text="Hover your camera to a printed text"
         android:textAlignment="center"
         android:textColor="#E73927"
         android:textSize="25sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/instruction_two_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent" />
