--- a/app/src/main/res/layout/activity_today_page.xml
+++ b/app/src/main/res/layout/activity_today_page.xml
@@ -6,16 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".today_page">
 
-    <ImageView
-        android:id="@+id/redBackground2"
-        android:layout_width="522dp"
-        android:layout_height="281dp"
-        android:layout_marginBottom="576dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="421dp"
+        android:layout_height="92dp"
+        android:background="#E73927"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/background" />
+        app:layout_constraintTop_toTopOf="parent" />
+
 
     <ImageView
         android:id="@+id/imageView6"
@@ -282,7 +283,19 @@
             android:textSize="25sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/textView3"
-            app:layout_constraintStart_toStartOf="parent" /><![CDATA[
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <ImageButton
+            android:id="@+id/imageButton"
+            android:layout_width="42dp"
+            android:layout_height="35dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginBottom="92dp"
+            android:background="#FFFCFC"
+            app:tint="#FDCB00"
+            app:layout_constraintBottom_toTopOf="@+id/card_view_medicine"
+            app:layout_constraintStart_toEndOf="@+id/textView14"
+            app:srcCompat="@android:drawable/arrow_down_float" /><![CDATA[
 
 
 
